MultiManagementSystem/Components/Pages/LoginPage.razor.css
.login-container {
    display: flex;
    flex-direction: column;
    align-items: center;
    margin-top: 5rem;
    font-size: 1.25rem; 
}

.login-header {
    text-align: center;
    font-size: 2rem;
    margin-bottom: 2rem;
}

.form-field {
    display: flex;
    flex-direction: column;
    align-items: flex-start;
    margin-bottom: 1.5rem;
}

    .form-field input {
        font-size: 1.25rem;
        padding: 0.5rem;
        width: 100%;
    }

.submit-button {
    background-color: #007bff; 
    color: white;
    font-size: 1.25rem;
    padding: 0.75rem 1.5rem;
    border: none;
    border-radius: 4px;
    cursor: pointer;
    margin-bottom: 1rem;
    width: 33%; 
    max-width: 200px;
    text-align: center;
    margin-bottom: 1rem;
}

.navigate-button {
    font-size: 1.25rem;
    padding: 0.75rem 1.5rem;
    border: 1px solid #007bff;
    color: #007bff;
    background-color: transparent;
    border-radius: 4px;
    cursor: pointer;
    width: 33%; 
    max-width: 200px; 
    text-align: center;
}

.submit-button:hover {
    background-color: #0056b3;
}

.navigate-button:hover {
    background-color: #e9f2ff;
}

